--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="minimum-scale=1.0,width=device-width,maximum-scale=1,user-scalable=no" />
 		<style>
 			body {text-align:center;font-family:arial;padding-top:2vh}
-			textarea {font-family:arial;width:1000px;height:40vh;font-size:10vh}
+			textarea {font-family:arial;width:1000px;height:40vh;font-size:8vh}
 			input {font-size:5vh;padding:2vh;width:15vw;cursor:pointer}
 			@media (max-width: 1000px) {
 				textarea {width:90%;height:30vh;font-size:4vh}
@@ -36,7 +36,7 @@
 		</script>
 	</head>
 	<body ontouchstart>
-		<textarea></textarea>
+		<textarea>The only way to do great work is to love what you do.</textarea>
 		<br /><br />
 		<input type="button" value="Clear" onclick="clear_()" /> 
 		<input type="button" value="Speak" onclick="speak()" />
