disable keyboard autocapitalize

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</style>
 	</head>
 	<body ontouchstart>
-		<textarea autofocus>mommy</textarea>
+		<textarea autocapitalize="off" autofocus>mommy</textarea>
 		<br /><br />
 		<input type="button" value="Clear" onclick="clear_()" /> 
 		<input type="button" value="Speak" onclick="speak()" />
